--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ textarea.form-control {
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="C:\Users\shrin\OneDrive\Pictures\Screenshots\4.png" alt="AI-Powered Security System">
+                        <img src="images/4.png" alt="AI-Powered Security System">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">SmartFactory Metrics</h3>
@@ -852,7 +852,7 @@ textarea.form-control {
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="C:\Users\shrin\sample codes\port\5.png" alt="Secure Payment Gateway">
+                        <img src="images/5.png" alt="Secure Payment Gateway">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">FlashForge</h3>
@@ -880,7 +880,7 @@ textarea.form-control {
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="C:\Users\shrin\sample codes\port\6.png" alt="Smart Inventory System">
+                        <img src="images/6.png" alt="Smart Inventory System">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Smart Inventory System</h3>
