--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ textarea.form-control {
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="C:/Users/shrin/OneDrive/Pictures/Saved Pictures/3.jpg" alt="My Photo" width="500">
+                    <img src="3.jpg" alt="My Photo" width="500">
                 </div>
             </div>
         </div>
@@ -827,7 +827,7 @@ textarea.form-control {
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/4.png" alt="AI-Powered Security System">
+                        <img src="images/4.png" alt="My Photo">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">SmartFactory Metrics</h3>
@@ -852,7 +852,7 @@ textarea.form-control {
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/5.png" alt="Secure Payment Gateway">
+                        <img src="images/5.png" alt="My Photo>
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">FlashForge</h3>
@@ -880,7 +880,7 @@ textarea.form-control {
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/6.png" alt="Smart Inventory System">
+                        <img src="images/6.png" alt="My Photo">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Smart Inventory System</h3>
