--- a/index.html
+++ b/index.html
@@ -705,8 +705,7 @@ textarea.form-control {
                     </div>
                 </div>
                 <div class="hero-image">
-<!--                     <img src="3.jpg" alt="My Photo" width="500"> -->
-                    <img src="https://via.placeholder.com/300" alt="Sample Image">
+                    <img src="3.jpg" alt="My Photo" width="500">
                 </div>
             </div>
         </div>
