--- a/index.html
+++ b/index.html
@@ -851,31 +851,32 @@ textarea.form-control {
                 
                 <!-- Project 2 -->
                 <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/5.png" alt="My Photo>
-                    </div>
-                    <div class="project-info">
-                        <h3 class="project-title">FlashForge</h3>
-                        <p class="project-description">
-                            A collaborative flashcard platform designed for students to create, share, and study decks. Includes user profiles, spaced repetition, and real-time deck collaboration.
-                        </p>
-                        <div class="project-tags">
-                            <span class="project-tag">Angular</span>
-                            <span class="project-tag">TypeScript</span>
-                            <span class="project-tag">HTML</span>
-                            <span class="project-tag">SCSS</span>
-                            <span class="project-tag">Node.js</span>
-                            <span class="project-tag">Express.js</span>
-                            <span class="project-tag">MongoDB</span>
-                            <span class="project-tag">Mongoose</span>
-                            <span class="project-tag">REST API</span>                           
+                        <div class="project-image">
+                            <img src="images/5.png" alt="My Photo">
                         </div>
-                        <div class="project-links">
-                            <a href="C:\Users\shrin\OneDrive\Documents\FSD Assignments\FlashForge\FlashForge" class="project-link">View Project</a>
-                            <a href="C:\Users\shrin\OneDrive\Documents\FSD Assignments\FlashForge\FlashForge" class="project-link">Source Code</a>
+                        <div class="project-info">
+                            <h3 class="project-title">FlashForge</h3>
+                            <p class="project-description">
+                                  A collaborative flashcard platform designed for students to create, share, and study decks. Includes user profiles, spaced repetition, and real-time deck collaboration.
+                            </p>
+                            <div class="project-tags">
+                              <span class="project-tag">Angular</span>
+                              <span class="project-tag">TypeScript</span>
+                              <span class="project-tag">HTML</span>
+                              <span class="project-tag">SCSS</span>
+                              <span class="project-tag">Node.js</span>
+                              <span class="project-tag">Express.js</span>
+                              <span class="project-tag">MongoDB</span>
+                              <span class="project-tag">Mongoose</span>
+                              <span class="project-tag">REST API</span>                           
+                            </div>
+                            <div class="project-links">
+                                <a href="#" class="project-link" target="_blank">View Project</a>
+                                <a href="#" class="project-link" target="_blank">Source Code</a>
+                            </div>
                         </div>
                     </div>
-                </div>
+
                 
                 <!-- Project 3 -->
                 <div class="project-card">
